--- a/src/styles.css/styles.css
+++ b/src/styles.css/styles.css
@@ -37,9 +37,9 @@ img {
 }
 
 /*
- * Стили компонента Searchbar
+ * Стили компонента SearchBar
  */
-.Searchbar {
+.SearchBar {
   top: 0;
   left: 0;
   position: sticky;
